# fastapi_tests_with_telegram_bot

./: .env-example  .gitignore  Makefile  Readme.md  admin_convert_data.py  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  tg_main.py
extra_data/: questions.csv
migration/: env.py
migration/versions/: 0408ec7df0da_.py  d48baf4558e2_async_initial.py
service/: __main__.py  config.py  db_watchers.py  errors.py  schemas.py  test_fill_db.py  utils.py
service/db_setup/: db_settings.py  models.py  schemas.py
service/endpoints/: data_handlers.py  game_handlers.py  put_handlers.py  tg_handlers.py  update_handlers.py  user_handler.py
telegram_service/: __init__.py  process.py  schemas_tg.py  tg_config.py
tests/: conftest.py  test_db_accessors.py  test_fill_db.py  test_handlers.py
